--- a/.github/workflows/godot-ci.yaml
+++ b/.github/workflows/godot-ci.yaml
@@ -56,12 +56,12 @@ jobs:
           curl -fsSL https://github.com/gzuidhof/coi-serviceworker/raw/master/coi-serviceworker.js > coi-serviceworker.js
           sed -i 's#\(		<script src="index.js"></script>\)#		<script src="coi-serviceworker.js"></script>\n\1#g' index.html
 
-      # Installing rsync is needed in order to deploy to GitHub Pages. Without it, the build will fail.
+      # Installing rsync is needed in order to deploy to GitHub Pages. Without it, the build will fail
       - name: Install rsync 📚
         run: |
           apt-get update && apt-get install -y rsync
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: build/web # The folder the action should deploy.
+          branch: gh-pages # The branch the action should deploy to
+          folder: build/web # The folder the action should deploy
